objects/JBP__c.object
<CustomObject>
    <fields>
        <fullName>Addressed_Market_Segment__c</fullName>
        <inlineHelpText>Description of the market in which the partner conducts business, for example, the industries the partner focuses on, the product segments the partner sells, the geographic area where the partner conducts its business, etc.</inlineHelpText>
        <label>Addressed Market Segment</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BG__c</fullName>
        <inlineHelpText>The name of the HP business group responsible for the plan.</inlineHelpText>
        <label>Business Group</label>
        <picklist>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Relationship_jbp__c</fullName>
        <formula>Partner_Account__r.MDCP_Business_Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <inlineHelpText>Characteristics that place the partner at a disadvantage relative to others, for example, the partner has fewer certifications in a product segment than its competitors or the partner recently lost its best sales reps.</inlineHelpText>
        <label>Challenges</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Channel_Management_Approver_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if management approval is required for this plan.  If this field is checked, a HP approver must be entered in the HP Management Sponsor field.</inlineHelpText>
        <label>HP Management Sponsor Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complementary_Industry_Engineer_Certs__c</fullName>
        <inlineHelpText>A list of non-HP industry certifications that the partner has obtained for Engineers</inlineHelpText>
        <label>Non-HP Engineer Certifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complementary_Industry_PreSales_Certs__c</fullName>
        <inlineHelpText>A list of non-HP industry certifications that the partner has obtained for Presales</inlineHelpText>
        <label>Non-HP Presales Certifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complementary_Industry_Sales_Rep_Certs__c</fullName>
        <inlineHelpText>A list of non-HP industry certifications that the partner has obtained for Sales Reps</inlineHelpText>
        <label>Non-HP Sales Rep Certifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dynamic_URL__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_210, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_210) -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dynamic URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <inlineHelpText>Overview of the partner and its business with HP.  Details can include a brief history of the partner, key facts of the partner (e.g., location, revenue, # of employees), previous accomplishments, goals for the coming year, market conditions, etc.</inlineHelpText>
        <label>Executive Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HP_Approval_Status__c</fullName>
        <description>Capture HP Approval Status</description>
        <inlineHelpText>Status of the internal HP approval.</inlineHelpText>
        <label>HP Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HP_Dedicated_Employees__c</fullName>
        <inlineHelpText>The number of partner employees that support the HP account.</inlineHelpText>
        <label>HP Dedicated Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HP_Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The HP executive who supports the plan.</inlineHelpText>
        <label>HP Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Joint_Business_Plans3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsPBMUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPBMUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Same_Partner_Approvers__c</fullName>
        <formula>IF( Partner_ApproverUser_Account_Manager__c !=  Partner_ApproverUser_Principal_Sponsor__c, False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Same Partner Approvers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Approved_By_Ptnr_Principal_Sponsor__c</fullName>
        <description>Field to capture the Partner Principal Sponsor Approval Date inorder to export the date to PPT</description>
        <label>Last Approved By Ptnr Principal Sponsor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Approved_Date_By_HP_Approver__c</fullName>
        <label>Last Approved Date By HP Approver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Approved_Date_By_Partner_Approver__c</fullName>
        <label>Last Approved Date By Partner Approver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_Aligned__c</fullName>
        <label>Last Date Aligned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_Reviewed__c</fullName>
        <label>Last Date Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Profile Locator ID</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Joint Business Plans</relationshipLabel>
        <relationshipName>Joint_Business_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Login_User_Profile__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Login User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Term_Strategic_Focus_3_5_Years__c</fullName>
        <inlineHelpText>The long-term vision for the partner’s business over the next 2-5 years.</inlineHelpText>
        <label>Long Term Strategic Focus: 3-5 Years</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MDCP_ID__c</fullName>
        <formula>Partner_Account__r.MDCP_Organization_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The unique identifier in MDCP for an account.</inlineHelpText>
        <label>MDCP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_HP_Management_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the HP management sponsor who will review and approve this plan if required.</inlineHelpText>
        <label>HP Approver - Management Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Joint_Business_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Certified_Engineers__c</fullName>
        <inlineHelpText>The partner&apos;s total number of engineers with HP certifications relevant to the business group of the plan. Data is populated automatically.</inlineHelpText>
        <label>HP Certified Engineers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Certified_Presales__c</fullName>
        <inlineHelpText>The partner&apos;s total number of presales people with HP certifications relevant to the business group of the plan. Data is populated automatically.</inlineHelpText>
        <label>HP Certified Presales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Certified_Sales_Reps__c</fullName>
        <inlineHelpText>The partner&apos;s total number of sales reps with HP certifications relevant to the business group of the plan.</inlineHelpText>
        <label>HP Certified Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_HP_Engineers__c</fullName>
        <inlineHelpText>Number of engineers designated to the partner&apos;s HP business for the business group of the plan.</inlineHelpText>
        <label>HP Dedicated Engineers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_HP_Presales__c</fullName>
        <inlineHelpText>Number of presales people designtaed to the partner&apos;s HP business for the business group of the plan.</inlineHelpText>
        <label>HP Dedicated Presales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_HP_Sales_Reps__c</fullName>
        <inlineHelpText>Number of sales reps designated to the partner&apos;s HP business for the business group of the plan.</inlineHelpText>
        <label>HP Dedicated Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <inlineHelpText>Elements in the environment that the partner could exploit to its advantage, for example, the partner&apos;s customers are investing heavily in a particular product segment, the partner&apos;s main competitor moved out of the area, etc.</inlineHelpText>
        <label>Opportunities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PPT_Export_Currency__c</fullName>
        <inlineHelpText>The currency defaulted for the PowerPoint export.</inlineHelpText>
        <label>PPT Export Default Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PKR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPT_Export_Language__c</fullName>
        <description>PPT Export Default Language</description>
        <inlineHelpText>The language defaulted for the PowerPoint export.</inlineHelpText>
        <label>PPT Export Default Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Brazilian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish (Latin America/Mexico)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPT_Export_Status__c</fullName>
        <label>PPT Export Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Joint Business Plans</relationshipLabel>
        <relationshipName>Joint_Business_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Approval_Status__c</fullName>
        <description>Field to capture partner approval status.</description>
        <inlineHelpText>Status of the partner&apos;s approval.</inlineHelpText>
        <label>Partner Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted to Partner Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by Partner Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Partner Principal Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by Partner Principal Sponsor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_ApproverUser_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner ApproverUser - Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Joint_Business_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_ApproverUser_Principal_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner ApproverUser - Principal Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Joint_Business_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the partner who oversees the HP business.</inlineHelpText>
        <label>Partner Approver - Principal  Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Joint Business Plans</relationshipLabel>
        <relationshipName>Joint_Business_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the partner who will review and approve this plan.</inlineHelpText>
        <label>Partner Approver - Account Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Joint Business Plans (Partner Approver)</relationshipLabel>
        <relationshipName>Joint_Business_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Executive_Sponsor_lookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The partner executive who supports the plan.</inlineHelpText>
        <label>Partner Executive Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Joint Business Plans (Partner Executive Sponsor)</relationshipLabel>
        <relationshipName>Joint_Business_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Fiscal_Year_End__c</fullName>
        <inlineHelpText>The end date of the partner&apos;s fiscal year.</inlineHelpText>
        <label>Partner Fiscal Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Plan_ID__c</fullName>
        <displayFormat>JBP - {0000000000}</displayFormat>
        <inlineHelpText>The system generated unique identifier for the plan in salesforce.com.</inlineHelpText>
        <label>Partner Plan ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Partner_Total_Addressable_Market_TAM__c</fullName>
        <inlineHelpText>The total potential market for the partner’s products and services measured in revenue per year.</inlineHelpText>
        <label>Partner Total Addressable Market (TAM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlanCreatedDate__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Country__c</fullName>
        <formula>Location__r.Sell_Into_Market__c</formula>
        <label>Plan Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_End_Date__c</fullName>
        <inlineHelpText>Date the plan ends, typically on the last day of HP&apos;s fiscal year, October 31st.</inlineHelpText>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Start_Date__c</fullName>
        <inlineHelpText>Date the plan starts, typically on the first day of HP&apos;s fiscal year, November 1st.</inlineHelpText>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Big_Wins_and_When_Fiscal_Year__c</fullName>
        <inlineHelpText>Large HP opportunities the partner won in the prior year.</inlineHelpText>
        <label>Previous Big Wins</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Previous_Year_HP_Revenue__c</fullName>
        <inlineHelpText>The partner’s total sales of all HP’s products/services for the prior year in the country of the plan.</inlineHelpText>
        <label>Previous Year HP Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Year_Total_Revenue__c</fullName>
        <inlineHelpText>The partner’s total revenue inclusive of HP and competitors for the prior year in the country of the plan for all products/services sold by the partner.</inlineHelpText>
        <label>Previous Year Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_Plan_Review_Date__c</fullName>
        <inlineHelpText>The date of the quarterly joint business review with HP and the partner.</inlineHelpText>
        <label>Q1 Plan Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q2_Plan_Review_Date__c</fullName>
        <inlineHelpText>The date of the quarterly joint business review with HP and the partner.</inlineHelpText>
        <label>Q2 Plan Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q3_Plan_Review_Date__c</fullName>
        <inlineHelpText>The date of the quarterly joint business review with HP and the partner.</inlineHelpText>
        <label>Q3 Plan Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Formula__c</fullName>
        <formula>if((ISPICKVAL(HP_Approval_Status__c, &quot;Not Submitted&quot;) &amp;&amp; ISPICKVAL( Partner_Approval_Status__c,&quot;Not Submitted&quot; ))&amp;&amp;(IsPBMUpdated__c== false), $Label.New, 
if(((IsPBMUpdated__c== true)&amp;&amp; (ISPICKVAL(HP_Approval_Status__c,&quot;Not Submitted&quot;) &amp;&amp; ISPICKVAL( Partner_Approval_Status__c,&quot;Not Submitted&quot;))),$Label.In_Progress,
if((ISPICKVAL(HP_Approval_Status__c,&quot;Submitted&quot; ) || CONTAINS(TEXT(Partner_Approval_Status__c),&apos;Submitted to&apos;)),$Label.Submitted_Pending,
if((ISPICKVAL(HP_Approval_Status__c,&quot;Rejected&quot;) || CONTAINS(TEXT(Partner_Approval_Status__c),&quot;Rejected&quot;)), $Label.Rejected,
if((ISPICKVAL(HP_Approval_Status__c,&quot;Approved&quot;) &amp;&amp; ISPICKVAL( Partner_Approval_Status__c,&quot;Approved&quot;)),$Label.Approved,&quot;&quot;)))))</formula>
        <inlineHelpText>The overall status of the plan (New, In Progress, Submitted/Pending Review, Approved,  Rejected)</inlineHelpText>
        <label>Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <inlineHelpText>Characteristics of the partner’s business that give it an advantage over others, for example, the partner has the most experienced engineers in its market or the partner has a highly rated support function.</inlineHelpText>
        <label>Strengths</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sub_Bg__c</fullName>
        <inlineHelpText>This field is only used for the Software business group to distinguish different types of Software plans for a partner.</inlineHelpText>
        <label>Sub Business Group</label>
        <picklist>
            <controllingField>BG__c</controllingField>
            <picklistValues>
                <fullName>Autonomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertica</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <inlineHelpText>Elements in the environment that could cause disruption for the partner, for example, a strong competitor moved in to the partner&apos;s market or a large customer is cutting back IT spending.</inlineHelpText>
        <label>Threats</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_Planned_MDF_for_Q1__c</fullName>
        <inlineHelpText>The sum of the planned Market Development Funds values across sub-plans for Q1</inlineHelpText>
        <label>Total Planned MDF for Q1</label>
        <summarizedField>GBU_Specialization_Plans__c.Total_Planned_MDF_for_Q1__c</summarizedField>
        <summaryForeignKey>GBU_Specialization_Plans__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_MDF_for_Q2__c</fullName>
        <inlineHelpText>The sum of the planned Market Development Funds values across sub-plans for Q2</inlineHelpText>
        <label>Total Planned MDF for Q2</label>
        <summarizedField>GBU_Specialization_Plans__c.Total_Planned_MDF_for_Q2__c</summarizedField>
        <summaryForeignKey>GBU_Specialization_Plans__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_MDF_for_Q3__c</fullName>
        <inlineHelpText>The sum of the planned Market Development Funds values across sub-plans for Q3</inlineHelpText>
        <label>Total Planned MDF for Q3</label>
        <summarizedField>GBU_Specialization_Plans__c.Total_Planned_MDF_for_Q3__c</summarizedField>
        <summaryForeignKey>GBU_Specialization_Plans__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_SGA_for_Q1__c</fullName>
        <inlineHelpText>The sum of the planned Partner Compensation values across sub-plans for Q1</inlineHelpText>
        <label>Total Planned Partner Comp For Q1</label>
        <summarizedField>GBU_Specialization_Plans__c.Total_Planned_SGA_for_Q1__c</summarizedField>
        <summaryForeignKey>GBU_Specialization_Plans__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_SGA_for_Q2__c</fullName>
        <inlineHelpText>The sum of the planned Partner Compensation values across sub-plans for Q2</inlineHelpText>
        <label>Total Planned Partner Comp for Q2</label>
        <summarizedField>GBU_Specialization_Plans__c.Total_Planned_SGA_for_Q2__c</summarizedField>
        <summaryForeignKey>GBU_Specialization_Plans__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_SGA_for_Q3__c</fullName>
        <inlineHelpText>The sum of the planned Partner Compensation values across sub-plans for Q3</inlineHelpText>
        <label>Total Planned Partner Comp for Q3</label>
        <summarizedField>GBU_Specialization_Plans__c.Total_Planned_SGA_for_Q3__c</summarizedField>
        <summaryForeignKey>GBU_Specialization_Plans__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Sales_for_Q1__c</fullName>
        <inlineHelpText>The sum of the planned Sales values across sub-plans for Q1</inlineHelpText>
        <label>Total Planned Sales for Q1</label>
        <summarizedField>GBU_Specialization_Plans__c.Total_Planned_Sales_for_Q1__c</summarizedField>
        <summaryForeignKey>GBU_Specialization_Plans__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Sales_for_Q2__c</fullName>
        <inlineHelpText>The sum of the planned Sales values across sub-plans for Q2</inlineHelpText>
        <label>Total Planned Sales for Q2</label>
        <summarizedField>GBU_Specialization_Plans__c.Total_Planned_Sales_for_Q2__c</summarizedField>
        <summaryForeignKey>GBU_Specialization_Plans__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Sales_for_Q3__c</fullName>
        <inlineHelpText>The sum of the planned Sales values across sub-plans for Q3</inlineHelpText>
        <label>Total Planned Sales for Q3</label>
        <summarizedField>GBU_Specialization_Plans__c.Total_Planned_Sales_for_Q3__c</summarizedField>
        <summaryForeignKey>GBU_Specialization_Plans__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Url_10__c</fullName>
        <label>URL 10</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Url_1__c</fullName>
        <label>URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Url_2__c</fullName>
        <label>URL 2</label>
        <type>Url</type>
    </fields>
    <label>Joint Business Plan</label>
    <listViews>
        <fullName>All_Joint_Biz_Plans_Partner_EG_UK</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>BG__c</columns>
        <columns>Partner_Approval_Status__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>Partner_Approver__c</columns>
        <columns>Partner_Approver_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Joint Business Plans</label>
        <language>en_US</language>
        <sharedTo>
            <group>JBP_English_UK</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Joint_Business_Plans</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>BG__c</columns>
        <columns>Business_Relationship_jbp__c</columns>
        <columns>Partner_Approval_Status__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>Partner_Approver__c</columns>
        <columns>Partner_Approver_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Joint Business Plans</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Joint_Business_Plans_Bulgarian_bg</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>BG__c</columns>
        <columns>Partner_Approval_Status__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>Partner_Approver__c</columns>
        <columns>Partner_Approver_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>Всички съвместни бизнес планове</label>
        <language>en_US</language>
        <sharedTo>
            <group>JBP_Bulgarian</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Joint_Business_Plans_Czech_cs</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>BG__c</columns>
        <columns>Partner_Approval_Status__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>Partner_Approver__c</columns>
        <columns>Partner_Approver_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>Všechny společné obchodní plány</label>
        <language>en_US</language>
        <sharedTo>
            <group>JBP_Czech</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Joint_Business_Plans_Danish_da</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>BG__c</columns>
        <columns>Partner_Approval_Status__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>Partner_Approver__c</columns>
        <columns>Partner_Approver_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle  fælles forretningsplaner</label>
        <language>en_US</language>
        <sharedTo>
            <group>JBP_Danish</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Joint_Business_Plans_Dutch_nl_NL</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>BG__c</columns>
        <columns>Partner_Approval_Status__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>Partner_Approver__c</columns>
        <columns>Partner_Approver_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle gezamenlijke bedrijfsplannen</label>
        <language>en_US</language>
        <sharedTo>
            <group>JBP_Dutch</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
</CustomObject>